--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
+		<meta charset="utf-8" />
+		<meta name="author" content="Bruno Bouda" />
+		<meta name="Description" content="" />
 		<title>Amelie Boulangerie</title>
-		<link href="styles.css" rel="stylesheet">
+		<link href="styles.css" rel="stylesheet" />
 	</head>
 	<body>
 		<header>
@@ -20,29 +22,31 @@
 			</nav>
 			<main>
 				<h2>Experience the Difference</h2>
-				<p>Amelie Boulangerie is the master of flavor combinations. The jewel-colored macarons come in the most tempting of flavors. Experience the difference at Amelie Boulangerie.</p>
-			
+				<img src="/images/cafe-counter.jpg" alt="Cafe counter image" />
+				<p>
+					Amelie Boulangerie is the master of flavor combinations. The
+					jewel-colored macarons come in the most tempting of flavors.
+					Experience the difference at Amelie Boulangerie.
+				</p>
+
 				<ul>
 					<li>Small batch baking to ensure quality and freshness</li>
 					<li>Gluten free options available</li>
 					<li>Flavored coffees and teas</li>
 					<li>Live acoustic music on Thursdays and Saturday nights</li>
 				</ul>
-			
+
 				<address>
-					Amelie Boulangerie<br>
-					231 University Drive<br>
-					Tempe, AZ 85281<br>
-					480-555-5555<br>
+					Amelie Boulangerie<br />
+					231 University Drive<br />
+					Tempe, AZ 85281<br />
+					480-555-5555<br />
 					Hours: Mon-Sun, 6am-9pm
 				</address>
-			</main>	
+			</main>
 		</div>
 		<footer>
 			<p>Copyright &copy;2020 Amelie Boulangerie</p>
-		</footer>	
+		</footer>
 	</body>
 </html>
-
-
-
