--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="Description" content="" />
 		<title>Amelie Boulangerie</title>
 		<link href="styles.css" rel="stylesheet" />
+		<link rel="icon" href="/images/favicon.ico" />
 	</head>
 	<body>
 		<header>
