--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 	<body>
 		<header>
 			<h1>Amelie Boulangerie</h1>
+			<img src="/images/bowl.jpg" height="150" alt="" />
 		</header>
 		<div id="grid-container">
 			<nav>
 				<ul>
-					<li><a href="index.html">Home</a></li>
+					<li><a href="index.html" class="active">Home</a></li>
 					<li><a href="#">Pastries</a></li>
 					<li><a href="#">Events</a></li>
 					<li><a href="#">Contact</a></li>
