moved images location

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<header>
 			<h1>Amelie Boulangerie</h1>
-			<img src="/images/bowl.jpg" height="150" alt="" />
+			<img src="/images/bowl.jpg" height="150" alt="bowl image" />
 		</header>
 		<div id="grid-container">
 			<nav>
@@ -24,7 +24,7 @@
 			</nav>
 			<main>
 				<h2>Experience the Difference</h2>
-				<img src="/images/cafe-counter.jpg" alt="Cafe counter image" />
+				<img src="./images/cafe-counter.jpg" alt="Cafe counter image" />
 				<p>
 					Amelie Boulangerie is the master of flavor combinations. The
 					jewel-colored macarons come in the most tempting of flavors.
